--- a/index.html
+++ b/index.html
@@ -27,12 +27,13 @@
     }
 
     .description {
-      font-size: 2rem;
+      font-size: 3rem;
+      font-weight: 600;
       margin-bottom: 1rem;
     }
 
     .image {
-      width: 40%;
+      transform: scale(50%);
       margin: 3rem;
     }
   </style>
